# pratinjau

./: CMakeLists.txt  Main.qml  fileinfo.cpp  fileinfo.h  main.cpp
commons/: SvgIcon.qml
components/: TitleBar.qml
qml/: Main.qml  Style.qml  Viewer.qml  ViewerRegistry.qml
qml/commons/: CButton.qml  CText.qml  CTextIcon.qml  SvgIcon.qml
qml/components/: TitleBar.qml
qml/viewer/: ImageViewer.qml
qml/viewers/: ImageViewer.qml  NoneViewer.qml
src/: fileinfo.cpp  fileinfo.h
viewer/: ImageViewer.qml
